Bug 336021 - DigiKam does not show translated messages for Map view.
Summary: DigiKam does not show translated messages for Map view.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-i18n (other bugs)
Version First Reported In: 4.0.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-10 02:47 UTC by André Marcelo Alvarenga
Modified: 2024-12-12 03:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.1.0
Sentry Crash Report:


Attachments
Screenshot (366.36 KB, image/png)
2014-06-10 02:47 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-06-10 02:47:02 UTC
See screenshot.

Right context menu opened with Marble.
Left context menu opened with digiKam.

Same problem with other context menu on Map Search panel.

Reproducible: Always




File: marble_qt.mo
Comment 1 André Marcelo Alvarenga 2014-06-10 02:47:53 UTC
Created attachment 87097 [details]
Screenshot
Comment 2 caulier.gilles 2014-06-10 05:18:28 UTC
Fully reproducible here...

Problem is certainly in libkgeomap.

Michael, do you see that we have this static string to load marble catalog :

https://projects.kde.org/projects/extragear/libs/libkgeomap/repository/revisions/master/entry/libkgeomap/kgeomap_common.cpp#L38

... but this one is never used...

Gilles Caulier
Comment 3 caulier.gilles 2014-06-10 06:24:59 UTC
Well no, other parts of digiKam use also an alone static instance of KCatalogLoader to load translations. Typically, the constructor call is enough to load catalog.

Gilles Caulier
Comment 4 Michael G. Hansen 2014-06-10 20:15:45 UTC
Git commit 3e36a4a24cc03505f9352ef9248d3cec2c6e5d3a by Michael Georg Hansen.
Committed on 10/06/2014 at 20:15.
Pushed by mghansen into branch 'master'.

Load Marble translations.

M  +5    -2    libkgeomap/kgeomap_common.cpp

http://commits.kde.org/libkgeomap/3e36a4a24cc03505f9352ef9248d3cec2c6e5d3a
Comment 5 Michael G. Hansen 2014-06-10 20:18:50 UTC
Hi,

Gilles, the code you mention only loads the translations for libkgeomap. I added code to also load the translations for Marble there as well. I am not sure whether this is the official way to do it, but it works on my system.

Best regards,

Michael

PS: For people with English locales, to test another language type this:
LANG=de_DE.UTF-8 LANGUAGE=de_DE.UTF-8 digikam

Note that you have to have kde-l10n-de installed on Kubuntu.