Load Marble translations.

BUG: 336021