libkgeomap/kgeomap_common.cpp
@@ -7,7 +7,7 @@
  * @date   2010-07-14
  * @brief  Common internal data structures for libkgeomap
  *
- * @author Copyright (C) 2010,2013 by Michael G. Hansen
+ * @author Copyright (C) 2010,2013,2014 by Michael G. Hansen
  *         <a href="mailto:mike at mghansen dot de">mike at mghansen dot de</a>
  * @author Copyright (C) 2010-2013 by Gilles Caulier
  *         <a href="mailto:caulier dot gilles at gmail dot com">caulier dot gilles at gmail dot com</a>
@@ -35,7 +35,10 @@
 
 #include "backend_map.h"
 
-static const KCatalogLoader loader("libkgeomap");
+static const KCatalogLoader loader_kgeomap("libkgeomap");
+// We also load the translations for Marble here, because
+// Marble does not load them on its own. BKO#336021
+static const KCatalogLoader loader_marble("marble_qt");
 
 namespace KGeoMap
 {
